Fix horizontal scroll

--- a/src/pages/story/Component3/Component3.css
+++ b/src/pages/story/Component3/Component3.css
@@ -69,7 +69,7 @@ align-self: flex-start;
 .Component3-1948-heading-content-1{
     color: var(--white, #FFF);
 font-family: 'Didone Room Numbers';
-font-size: 20px;
+font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
@@ -86,7 +86,7 @@ text-wrap: nowrap;
 .Component3-1948-heading-content-2{
     color: var(--black, #262626);
 font-family: Skywalks;
-font-size: 20px;
+font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 131.5%; /* 63.12px */
